# mir_server

./: README.md  mir_server_build.bat  mir_server_build_1.57.bat  mir_server_build_32.bat
Src/: CMakeLists.txt
Src/Common/: CMakeLists.txt  DBEngine.cpp  DBManager.cpp  DBManager.h  DBObject.cpp  HeartBeat.h  ObjectProperty.cpp  ThreadExitHelper.h
Src/GameServer/: CMakeLists.txt
Src/GateServer/: CMakeLists.txt  main.cpp  server.h
Src_1.57/: CMakeLists.txt
Src_1.57/Common/: DBObject.h  LogType.h  ObjectProperty.h  ObjectPropertyManager.cpp  RedisDBManager.cpp  RedisDBManager.h
Src_1.57/GameServer/: CMakeLists.txt
Src_1.57/GateServer/: CMakeLists.txt  server.cpp
Src_32/: CMakeLists.txt  MirServerConfig.h.in
Src_32/Common/: CMakeLists.txt  CommDef.h  ConfigParseHelper.h  DBEngine.h  JsonHelper.h  ObjectPropertyManager.h  RedisDBOperator.cpp  RedisDBOperator.h  RedisDataAccount.h  RedisKeyManager.cpp  RedisKeyManager.h  RedisOperatorHelper.h  ThreadExitHelper.cpp  mir_proto.adl.h  opcodes.pb.cc  opcodes.pb.h
Src_32/GameServer/: CMakeLists.txt  main.cpp
Src_32/GateServer/: CMakeLists.txt  auth.cpp  auth.h  gce_tcp_server.cpp  gce_tcp_server.h  main.cpp  player.cpp  player.h  server.cpp  session.cpp  session.h
