if (WIN32)
  set (PROJECT_WINVER "0x0601" CACHE STRING "Windows version maro. Default is 0x0601 - win7, user can reset")
  add_definitions (-D_WIN32_WINNT=${PROJECT_WINVER})
endif ()

if(WIN32)
include_directories("${PROJECT_SOURCE_DIR}/../../boost_1_58_0")
include_directories(${PROJECT_SOURCE_DIR}/Library)
include_directories("${PROJECT_SOURCE_DIR}/../../gce_install_boost_1.58_debug_32/include/gce/adata/cpp")
include_directories("${PROJECT_SOURCE_DIR}/../libs/protobuf/include")
include_directories("${PROJECT_SOURCE_DIR}/../libs/json/include")
include_directories("${PROJECT_SOURCE_DIR}/../libs/MySQL/include/x64")
include_directories("${PROJECT_SOURCE_DIR}/../libs/MySQL Connector C++ 1.1.2/include/x64")
include_directories("${PROJECT_SOURCE_DIR}/../libs/redis-cplusplus-client/include")
else()
include_directories("${PROJECT_SOURCE_DIR}/../../boost_1_58_0")
include_directories(${PROJECT_SOURCE_DIR}/Library)
include_directories("${PROJECT_SOURCE_DIR}/../../json/include")
include_directories("${PROJECT_SOURCE_DIR}/../../mysql-5.5.24-linux2.6-x86_64/include")
include_directories("${PROJECT_SOURCE_DIR}/../../mysql-connector-c++-1.1.2-linux-glibc2.3-x86-64bit/include")
include_directories("${PROJECT_SOURCE_DIR}/../../redis-cplusplus-client/include")
endif()

file (GLOB_RECURSE COMMON_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file (GLOB_RECURSE COMMON_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file (GLOB_RECURSE COMMON_SOURCE_FILES_2 "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")

set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

add_library(Common STATIC ${COMMON_HEADER_FILES} ${COMMON_SOURCE_FILES} ${COMMON_SOURCE_FILES_2})

install (TARGETS Common DESTINATION bin)
install (FILES ${COMMON_HEADER_FILES} DESTINATION include)